# scge

./: .gitignore  CMakeLists.txt  README  README.md  TODO  TODO.md  compile  ultra
doc/: index.html
documentation/: index.html
documentation_generator/: README  conclusion  functions.php  helloworld  index.php  parse_code.php  preparations  preperations  style.css  wip
engine/: .gitignore  CMakeLists.txt  TODO  audio.cpp  buffer.cpp  conf.h  conf.in  display.cpp  display.parseme.cpp  engine.cpp  engine.hpp  extra.cpp  fbo.cpp  font.cpp  functions.cpp  ibo.cpp  image.cpp  internal.cpp  microphone.cpp  midi.cpp  network.cpp  pixelcache.cpp  program.parseme.cpp  python.cpp  python.h  resources.cpp  scge.hpp  scge.parseme.hpp  sound.cpp  soundbyte.cpp  types.cpp  vao.cpp  vbo.cpp  window.cpp  window.parseme.cpp
game/: CMakeLists.txt  README  game.cpp
python/: .gitignore  compile  copyh.py  setup.py
python/scge/shared/: basic.py  kh.py  networking.py  scape.py  scene.py  tilemap.py
python/scge/shared/ui/: __init__.py
python_engine/: .gitignore  FIX.py  __CMakeLists.txt  compile  copyh.py  pyinstall  scge.i  scge.parseme.i  setup.py
python_engine/scge/shared/: basic.py  kh.py  scape.py
python_engine/scge/shared/ui/: __init__.py  styleTypes.py
python_engine/scge/shared/utilities/: settings.py
python_engine/shared/: basic.py  debug.py  kh.py  networking.py  settings.py
python_engine/shared/ui/: __init__.py  styleTypes.py
python_engine/shared/ui/common/: containers.py  intrinsics.py
python_engine/shared/utilities/: memorypacker.py
utilities/: nm.py
